cluster/apps/default/whoami/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: default
  labels:
    app: whoami
spec:
  selector:
    app: whoami
  ports:
    - port: 80
      protocol: TCP
      targetPort: http
      name: http
